tests/parser/syntax-errors/expected-expr/expected_expr_if_cond.choc
# RUN: choco-opt "%s" | filecheck "%s"

if :
    "then"

# CHECK:      SyntaxError (line 3, column 4): Expected expression.
# CHECK-NEXT: >>>if :
# CHECK-NEXT: >>>---^
